# modulus-operations

./: README.md
CppModules/module-06/: CMakeLists.txt
CppModules/module-06/ex00/: Makefile
CppModules/module-06/ex00/cmd/: main.cpp
CppModules/module-06/ex00/incs/: ScalaValidator.hpp  ScalarConverter.hpp  ScalarIterator.hpp  ScalarParser.hpp  ScalarPrinter.hpp  Variable.hpp
CppModules/module-06/ex00/src/: ScalaValidator.cpp  ScalarConverter.cpp  ScalarIterator.cpp  ScalarParser.cpp  ScalarPrinter.cpp  Variable.cpp
CppModules/module-06/ex01/cmd/: main.cpp
CppModules/module-06/ex01/incs/: Data.hpp  Serializer.hpp
CppModules/module-06/ex01/src/: Serializer.cpp
CppModules/module-06/ex02/cmd/: main.cpp
CppModules/module-06/ex02/incs/: A.hpp  B.hpp  Base.hpp  C.hpp
CppModules/module-06/ex02/src/: A.cpp  B.cpp  Base.cpp  C.cpp  generate.cpp  identify.cpp
DesignPatterns/CommandPattern/: Makefile
Module-00/ex00/: Makefile  megaphone.cpp
ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp  megaphone.cpp
ex01/: Bureaucrat.cpp  Bureaucrat.hpp  CheckGrade.hpp  Form.cpp  Form.hpp  Makefile  ex01  main.cpp
ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  CheckGrade.cpp  Form.cpp  Form.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp  a.cpp  a.h  a.out  main.cpp  main.ll
ex03/: AForm.cpp  Command.hpp  Intern.cpp  Light.hpp  LightOffCommand.hpp  LightOnCommand.hpp  Move.cpp  Move.hpp  PresidentialPardonForm.hpp  RemoteControl.hpp  a.out  fff.cpp  fff.h  main.cpp
(+173 files in other folders)
